<resources>
    <!-- Generics -->
    <string name="hint_ok">OK</string>
    <string name="hint_yes">Yes</string>
    <string name="hint_no">No</string>
    <string name="hint_done">Done</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_search">Search</string>
    <string name="hint_back">Navigate back</string>
    <string name="hint_try_again">Try again</string>
    <string name="hint_loading">Loading</string>
    <string name="hint_dismiss">Dismiss</string>
    <string name="hint_reset">Reset</string>
    <string name="hint_save">Save</string>
    <string name="hint_delete">Delete</string>
    <string name="hint_did_you_know">Did you know?</string>

    <string name="generic_log_error">Error in %1$s (%2$s)</string>

    <string name="generic_msg_error">Oops! Something went wrong. Please try again.</string>

    <string name="generic_changes_saved">Changes saved successfully!</string>

    <string name="menu_preferences">Preferences</string>

    <!-- Goal -->
    <string name="goal_title">My goals</string>
    <string name="goal_add">Add a new goal</string>
    <string name="goal_save_money">Save money</string>
    <string name="goal_take_money">Take money</string>
    <string name="goal_saved_relative">%1$s of %2$s saved</string>
    <plurals name="goal_deadline_remaining">
        <item quantity="one">Last day to achieve my goal!</item>
        <item quantity="other">%d days until my deadline</item>
    </plurals>
    <string name="goal_saved_percent">%.2f%% complete</string>

    <!-- Goal - Add -->
    <string name="goal_add_title">Adding a new goal</string>
    <string name="goal_add_invalid_description">Please give a short description to your goal</string>
    <string name="goal_add_invalid_cost">How much do you need to save?</string>
    <string name="goal_add_empty_deadline">When do you expect to achieve your goal?</string>
    <string name="goal_add_invalid_deadline">This deadline does not look like a valid date</string>
    <string name="goal_add_past_deadline">You can\'t achieve your goal in the past</string>

    <!-- Goal - Details -->
    <string name="goal_tab_title_details">Details</string>
    <string name="goal_tab_title_savings_log">Savings Log</string>

    <string name="goal_description">My goal</string>
    <string name="goal_cost">Amount to save</string>
    <string name="goal_deadline">Deadline</string>
    <string name="goal_savings">Savings</string>
    <string name="goal_total_saved">%s saved</string>
    <string name="goal_total_remaining">%s remaining</string>
    <string name="goal_savings_suggestions_title">Suggested savings</string>
    <string name="goal_savings_per_day">Save %s per day</string>
    <string name="goal_savings_per_week">Save %s per week</string>
    <string name="goal_savings_per_month">Save %s per month (30 day average)</string>
    <string name="goal_savings_actual_savings_title">My savings pace so far</string>
    <string name="goal_savings_actual_per_day">Saving %s per day</string>
    <string name="goal_savings_actual_per_week">Saving %s per week</string>
    <string name="goal_savings_actual_per_month">Saving %s per month (30 day average)</string>

    <string name="goal_save_success">Changes saved successfully!</string>
    <string name="goal_save_error">There was a problem saving your changes. Please try again.</string>
    <string name="goal_delete_title">Delete this goal?</string>
    <string name="goal_delete_message">You are about to delete %s.\n\nThis cannot be undone. Do you want to continue?</string>
    <string name="goal_delete_success">Goal deleted.</string>
    <string name="goal_delete_error">There was a problem deleting this goal. Please try again.</string>
    <string name="goal_achieved">You achieved this goal! If you want to continue saving money for it consider increasing the amount to save.</string>
    <string name="goal_overdue_short">This goal is overdue!</string>
    <string name="goal_overdue">This goal is overdue.\nUpdate the deadline to continue saving.</string>

    <!-- Goal - Hints -->
    <string name="goal_create_first_hint_title">Think of a goal and start saving!</string>
    <string name="goal_create_first_hint">
        Create a habit and keep track of your savings. PigBank will help you remember how much you saved to achieve your goals.
        \n\nStart by clicking the button below to create your first goal.
    </string>
    <string name="goal_quick_save_hint">
        Click any goal to check its details, get savings suggestions and check your savings log.
        \n\nClick the pig icon to quickly save money to a goal.
    </string>

    <!-- Savings -->
    <string name="savings_description">Saving money for %s</string>
    <string name="savings_amount">How much are you saving?</string>
    <string name="savings_saved">%1$s saved in %2$s</string>
    <string name="savings_invalid_amount">Are you sure you are saving money?</string>

    <string name="savings_remove_description">Taking money away from %s</string>
    <string name="savings_remove_amount">How much do you need to take away?</string>
    <string name="savings_removed">%1$s removed in %2$s</string>

    <!-- Preferences -->
    <string name="preferences_title">Preferences</string>
    <string name="preferences_changes_saved">Changes saved</string>
    <string name="preferences_changes_error">Changes saved</string>

    <string name="preferences_crash_report_opt_out_title">Crash Report Opt-out</string>
    <string name="preferences_crash_report_opt_out_description">This app uses Crashlytics to collect anonymized data about crashes and errors, which helps me make this app more stable. If you don\'t want your data to be sent uncheck this option
        \n\nYou can read Crashlytics privacy policy <a href="http://try.crashlytics.com/terms/">here</a></string>

    <string name="preferences_analytics_opt_out_title">Analytics Opt-out</string>
    <string name="preferences_analytics_opt_out_description">This app uses Fabric to collect anonymized analytics data, which helps me to understand how people use the app to keep improving the user experience. No information about the groups you create is collected. If you don\'t want your data to be sent uncheck this option
        \n\nYou can read Fabric privacy policy <a href="http://try.crashlytics.com/terms/">here</a></string>

    <string name="preferences_reset_hints_title">App Hints</string>
    <string name="preferences_reset_hints_button">Show again</string>
    <string name="preferences_reset_hints_description">All the hints that you dismissed will be shown again</string>
    <string name="preferences_reset_hints_confirm">The hints will be shown again</string>

    <string name="preferences_share">Share PigBank with a friend!</string>
    <string name="preferences_share_title">Sharing PigBank</string>
    <string name="preferences_share_text">Check out PigBank and keep track of your goals! Download at %s</string>
    <string name="preferences_rate">Rate PigBank in the Play Store!</string>
    <string name="preferences_about">Developed with ❤ by Filipe Belatti</string>
    <string name="preferences_app_version">Version: %s</string>

    <!-- DialogRate -->
    <string name="dialog_rate_title">Rate this app!</string>
    <string name="dialog_rate_cancel">Cancel</string>
    <string name="dialog_rate_header">If you\'re enjoying PigBank I would love to receive your review!</string>
    <string name="dialog_rate_feedback_positive">I\'m glad you\'re enjoying it!\nWhat about showing your love in the Play Store?</string>
    <string name="dialog_rate_play_store">Play Store</string>
    <string name="dialog_rate_feedback_negative">Would you mind sending me an e-mail suggesting what can I do to improve your experience with the app?</string>
    <string name="dialog_rate_send_email">Send e-mail</string>
    <string name="dialog_rate_send_email_subject">PigBank - Feedback</string>
    <string name="dialog_rate_send_email_title">Choose e-mail app</string>
</resources>
