<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutResetHints"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewTitleResetHints"
        style="@style/PreferencesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preferences_reset_hints_title"/>

    <include
        android:id="@+id/dividerResetHints"
        layout="@layout/layout_divider_default"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:layout_below="@+id/textViewTitleResetHints"
        android:layout_marginBottom="@dimen/margin_small"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dividerResetHints"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonResetHints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/preferences_reset_hints_button"
            android:theme="@style/AppButton.About"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewResetHints"
            style="@style/TextPrimary.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="fill"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_toEndOf="@+id/buttonResetHints"
            android:gravity="center_vertical"
            android:text="@string/preferences_reset_hints_description"/>
    </RelativeLayout>
</RelativeLayout>
