<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/dialog_add_goal">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/goal_description"
        android:theme="@style/Custom.InputLayoutPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextDescription"
            style="@style/TextPrimary.MainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:singleLine="true"
            tools:text="Trip to Japan"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutCost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/goal_cost"
        android:theme="@style/Custom.InputLayoutPrimary"
        app:layout_constraintEnd_toStartOf="@+id/inputLayoutDeadline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutDescription">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextCost"
            style="@style/TextPrimary.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789.,"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textSize="@dimen/text_size_regular"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutDeadline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/goal_deadline"
        android:theme="@style/Custom.InputLayoutPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputLayoutCost"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutDescription">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextDeadline"
            style="@style/TextPrimary.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:singleLine="true"
            android:textSize="@dimen/text_size_regular"/>
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>
