<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:padding="@dimen/padding_regular">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editTextDescription"
        style="@style/TextPrimary.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/goal_description"
        android:textSize="@dimen/text_size_extra_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Trip to Japan"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutCost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/goal_cost"
        android:theme="@style/Custom.InputLayoutPrimary"
        app:layout_constraintEnd_toStartOf="@+id/inputLayoutDeadline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/text_size_regular"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutDeadline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/goal_deadline"
        android:theme="@style/Custom.InputLayoutPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputLayoutCost"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextDeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:singleLine="true"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/text_size_regular"/>
    </android.support.design.widget.TextInputLayout>

    <DatePicker
        android:id="@+id/datePickerDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhiteOpaque"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>
