<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/padding_regular"
    android:paddingStart="@dimen/padding_regular">

    <include
        android:id="@+id/layoutToolbar"
        layout="@layout/layout_toolbar_default"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/layoutPreferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/layoutPreferences"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/dividerFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/layout_preferences_crash_report_opt_out"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/preferences_space_regular"/>

            <include layout="@layout/layout_preferences_analytics_opt_out"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/preferences_space_regular"/>

            <include layout="@layout/layout_preferences_reset_hints"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/preferences_space_large"/>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/dividerFooter"
        layout="@layout/layout_divider_default"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_size"
        app:layout_constraintBottom_toTopOf="@+id/layoutShareAndRate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPreferences"/>

    <LinearLayout
        android:id="@+id/layoutShareAndRate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/textViewAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerFooter">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonShare"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/preferences_share"
            android:theme="@style/AppButton.Neutral"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonRate"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/preferences_rate"
            android:theme="@style/AppButton.Neutral"/>
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewAbout"
        style="@style/TextPrimary.Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center_horizontal"
        android:text="@string/preferences_about"
        app:layout_constraintBottom_toTopOf="@+id/textViewAppVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutShareAndRate"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewAppVersion"
        style="@style/TextPrimary.Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:gravity="center_horizontal"
        android:text="@string/preferences_app_version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAbout"/>
</android.support.constraint.ConstraintLayout>
